[package]
name = "dban-core"
description = "Disk sanitization engine: wipe schemes, device discovery, safety interlocks"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = "0.2"
# Ed25519 detached signatures for tamper-evident erasure reports. Pure Rust,
# builds static under musl. `rand_core` lets us seed a key from getrandom.
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
