[package]
name = "dban"
description = "DBAN — boot-and-nuke disk sanitization appliance"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "dban"
path = "src/lib.rs"

[[bin]]
name = "dban"
path = "src/main.rs"

[dependencies]
dban-core = { path = "../dban-core" }
ratatui = "0.29"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
unicode-width = "0.2"
