[package]
name = "scour-core"
description = "Disk sanitization engine: wipe schemes, device discovery, safety interlocks"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
