[package]
name = "scour"
description = "Scour — boot-and-nuke disk sanitization appliance"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "scour"
path = "src/lib.rs"

[[bin]]
name = "scour"
path = "src/main.rs"

[dependencies]
scour-core = { path = "../scour-core" }
ratatui = "0.29"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
